# computer-simulation

./: .clang-format  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: binary-search-poisson-log.cpp.F7E95A730E891AB1.idx  binary-search-poisson.cpp.8E9BF648DA90A6A0.idx  helper.cpp.B31ABBA2E68B6188.idx  helper.h.B43EBA8602CB4D95.idx  main.cpp.13E9D97260FCC12F.idx  main.cpp.28DE9AB8EBD62DBE.idx  matplotlibcpp.h.F895A84C16D087EA.idx  pch.h.057642F90A5CA306.idx  poisson.h.3DADDD36E3C95627.idx  transformation-method-poisson.cpp.FD3DBB4B7D3839CC.idx
include/: helper.h  matplotlibcpp.h  poisson.h  timer.h
src/: helper.cpp  main.cpp
src/chapters/: queue-simulation.cpp
src/exercise-sets/exercise-set-6/: exercise.typ
src/problem-set-1/: problem9.py  stl.cpp
src/problem-set-2/: binary-search-poisson.cpp  transformation-method-poisson.cpp
src/problem-set-3/: discrete-event-simulation.cpp  retrospective-simulation.cpp
src/problem-set-3/answers/: answers.typ
src/problem-sets/problem-set-1/: main  problem1.cpp  problem3.cpp
src/problem-sets/problem-set-2/: binary-search-poisson-log.cpp  transformation-method-poisson-log.cpp  transformation-method-poisson.cpp
src/problem-sets/problem-set-3/: discrete-event-simulation.cpp  retrospective-simulation.cpp
src/problem-sets/problem-set-3/answers/: answers.typ
